[gd_scene load_steps=10 format=3 uid="uid://d3s6y2xg13wjs"]

[ext_resource type="Script" path="res://src/ui/equip_menu.gd" id="1_1xcuy"]
[ext_resource type="Texture2D" uid="uid://it8hjt58tya5" path="res://icon.svg" id="2_n3eij"]
[ext_resource type="Texture2D" uid="uid://cys7q57gjd2xp" path="res://assets/sprites/inventory coin wraps.png" id="3_salrj"]
[ext_resource type="Texture2D" uid="uid://bwviym4te4641" path="res://assets/sprites/inventory coin wrap shading.png" id="4_kse41"]
[ext_resource type="Texture2D" uid="uid://bwup8fk1lrh12" path="res://assets/coin_logos/penny logo.png" id="5_8luuc"]
[ext_resource type="Texture2D" uid="uid://cgtus8exk0r1f" path="res://assets/coin_logos/nickel logo.png" id="6_m2wki"]
[ext_resource type="Texture2D" uid="uid://dg1vn00iah6y5" path="res://assets/coin_logos/dime logo.png" id="7_dy11j"]
[ext_resource type="Texture2D" uid="uid://cyefjxe7obn4c" path="res://assets/coin_logos/quarter logo.png" id="8_k7yuu"]

[sub_resource type="SystemFont" id="SystemFont_3syu5"]
generate_mipmaps = true
subpixel_positioning = 0

[node name="EquipMenu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48
script = ExtResource("1_1xcuy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerStat" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(224, 200)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PlayerStat"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PlayerStat/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("2_n3eij")

[node name="StatList" type="VBoxContainer" parent="HBoxContainer/PlayerStat/HBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="HBoxContainer/PlayerStat/HBoxContainer/StatList"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/PlayerStat"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ammo Counts" type="TextureRect" parent="HBoxContainer/PlayerStat/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_right = 112.0
offset_bottom = 112.0
grow_horizontal = 2
texture = ExtResource("3_salrj")

[node name="PennyCount" type="Label" parent="HBoxContainer/PlayerStat/Control/Ammo Counts"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = 2.0
offset_right = -78.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.772549, 0.180392, 0.243137, 1)
theme_override_fonts/font = SubResource("SystemFont_3syu5")
theme_override_font_sizes/font_size = 17
text = "069"
horizontal_alignment = 1

[node name="NickelCount" type="Label" parent="HBoxContainer/PlayerStat/Control/Ammo Counts"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = 2.0
offset_right = -16.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.239216, 0.368627, 0.658824, 1)
theme_override_fonts/font = SubResource("SystemFont_3syu5")
theme_override_font_sizes/font_size = 17
text = "069"
horizontal_alignment = 1

[node name="DimeCount" type="Label" parent="HBoxContainer/PlayerStat/Control/Ammo Counts"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.5
offset_top = 2.5
offset_right = 44.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.219608, 0.482353, 0.211765, 1)
theme_override_fonts/font = SubResource("SystemFont_3syu5")
theme_override_font_sizes/font_size = 17
text = "069"
horizontal_alignment = 1

[node name="QuarterCount" type="Label" parent="HBoxContainer/PlayerStat/Control/Ammo Counts"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.5
offset_top = 2.5
offset_right = 104.5
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.996078, 0.470588, 0.207843, 1)
theme_override_fonts/font = SubResource("SystemFont_3syu5")
theme_override_font_sizes/font_size = 17
text = "069"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PlayerStat/Control"]
custom_minimum_size = Vector2(224, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_right = 112.0
offset_bottom = 112.0
grow_horizontal = 2
texture = ExtResource("4_kse41")

[node name="GunMods" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PennyMods" type="HBoxContainer" parent="HBoxContainer/GunMods"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GunMods/PennyMods"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_8luuc")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/GunMods/PennyMods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PennyModList" type="HBoxContainer" parent="HBoxContainer/GunMods/PennyMods/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NickelMods" type="HBoxContainer" parent="HBoxContainer/GunMods"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GunMods/NickelMods"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_m2wki")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/GunMods/NickelMods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NickelModList" type="HBoxContainer" parent="HBoxContainer/GunMods/NickelMods/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DimeMods" type="HBoxContainer" parent="HBoxContainer/GunMods"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GunMods/DimeMods"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("7_dy11j")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/GunMods/DimeMods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DimeModList" type="HBoxContainer" parent="HBoxContainer/GunMods/DimeMods/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuarterMods" type="HBoxContainer" parent="HBoxContainer/GunMods"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/GunMods/QuarterMods"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("8_k7yuu")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/GunMods/QuarterMods"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuarterModList" type="HBoxContainer" parent="HBoxContainer/GunMods/QuarterMods/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
